<resources>
    <string name="app_name">manamMiam</string>
    <string name="enroll">Enroll</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="manam_miam">Manam Miam</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="close">Close</string>
    <string name="favorite">Favorite</string>
    <string name="inbox">Inbox</string>
    <string name="sourceName">Source</string>
    <string name="price">Price</string>
    <string name="destinationName">Destination</string>
    <string name="services">Services</string>
    <string name="email">Email</string>
    <string name="capacity">Capacity: </string>
    <string name="accept">Accept</string>
    <string name="deny">deny</string>
    <string name="reserve">Reserve</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="blocked">Blocked</string>
    <string name="rates">Rates</string>
    <string name="accepted_genders">Accepted Genders:</string>
    <string name="all">All</string>
    <string name="error">Error</string>
    <string name="trips">Trips</string>
    <string name="authenticating">Authenticating</string>
    <string name="ellipse">…</string>
    <string name="report">Report</string>
    <string name="rate">Rate the service</string>
    <string name="thanks_for_rating">Thanks for Rating!</string>
    <string name="cancel_order">Cancel order?</string>
    <string name="capacity_no_colon">Capacity</string>
    <string name="choose_one_of_your_cars">Choose one of your cars</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="creating_new_service">Creating new Service</string>
    <string name="submit">Submit</string>
    <string name="price_dollar">Price (Dollar)</string>
    <string name="invalid_capacity">Invalid Capacity</string>
    <string name="invalid_price">Invalid Price</string>
    <string name="manam_miam_fa">منم ميام</string>
    <string name="add_new_service">Service</string>
    <string name="add_new_route">Route</string>
    <string name="add_new_car">Add new Car</string>
    <string name="add_new">Add new</string>
    <string name="create_trip">Create Trip</string>
    <string name="create_service">Create Service</string>
    <string name="similar_services">Similar Services</string>
    <string name="car_type">Car type</string>
    <string name="car_color">Car color</string>
    <string name="accepted_genders_will_be_set_by_the_admins">Accepted genders will be set by the Admins.</string>
    <string name="car_code">Car code</string>
    <string name="new_car_request_submitted">New car Request submitted. We Will contact you with more detail.</string>
    <string name="report_service">Report Service</string>
    <string name="explain_the_issue">Explain the issue!</string>
    <string name="report_submitted">Report Submitted</string>
    <string name="trip_canceled">Trip Canceled</string>
    <string name="service_reserved">Service Reserved</string>
    <string name="accept_request_submitted">You joined the service</string>
    <string name="log_out">Log out</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="password_rules">At least 8 character including:\nUpper &amp; lower character \nA number \nNo spaces!</string>
    <string name="passwords_must_match">Must match with you password</string>
    <string name="can_not_be_empty">Can\'t be empty!</string>
    <string name="enroll_successful">Enroll successful</string>
    <string name="trip_created">Trip created</string>
    <string name="service_created">Service Created</string>
    <string name="wrong_password_or_username_or_missing_permission">Wrong password or username or missing permission</string>
    <string name="failed_to_logout">Failed to logout</string>
    <string name="failed_to_reserve_service">Failed to reserve Service</string>
    <string name="already_a_passenger">Already a passenger</string>
    <string name="no_such_a_service_exists">No such a server exists</string>
    <string name="something_went_wrong">Something went Wrong</string>
    <string name="duplicate_trip">Duplicate trips won\'t be created</string>
    <string name="service_not_in_future">Service is not in the future</string>
    <string name="service_close_to_each_other">Services are too close to each other</string>
    <string name="no_valid_car">No valid Car</string>
    <string name="invalid_token">Invalid Token</string>
    <string name="phone_number">Phone Number</string>
    <string name="unknown">Unknown</string>
    <string name="failed_to_cancel_trip">Failed to cancel Trip</string>
    <string name="user_blocked">User Blocked</string>
    <string name="user_unverified">User Unverified</string>
    <string name="telegram_id">Telegram ID</string>
    <string name="telegram_id_rules">Invalid Telegram ID</string>
</resources>
