<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/src_dest_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_header_primary"
    android:elevation="2dp"
    android:orientation="horizontal">

    <com.amir.manammiam.infrastructure.customView.TextViewFont
        android:id="@+id/include_src_dest_text_source"
        style="@style/textViewIranSans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/sourceName"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big" />

    <com.amir.manammiam.infrastructure.customView.TextViewFont
        android:id="@+id/include_src_dest_text_price"
        style="@style/textViewIranSans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="2dp"
        android:paddingBottom="1dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small" />

    <com.amir.manammiam.infrastructure.customView.TextViewFont
        android:id="@+id/include_src_dest_text_destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="5dp"
        style="@style/textViewIranSans"
        android:text="@string/destinationName"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big" />

</LinearLayout>