<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/include_toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/activity_login_card_main_container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        card_view:cardElevation="4dp"
        android:background="#FFF9C4"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/include_manam_miam" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">


                <!--<com.rengwuxian.materialedittext.MaterialEditText-->
                <!--android:id="@+id/activity_login_edit_username"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="15dp"-->
                <!--app:met_baseColor="#0056d3"-->
                <!--app:met_errorColor="#ddaa00"-->
                <!--app:met_floatingLabel="normal"-->
                <!--app:met_floatingLabelText="Username"-->
                <!--app:met_primaryColor="#982360" />-->

                <com.amir.manammiam.infrastructure.EditTextFont
                    android:id="@+id/activity_login_edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:padding="15dp"
                    android:textSize="20sp" />

                <com.amir.manammiam.infrastructure.EditTextFont
                    android:id="@+id/activity_login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/activity_login_btn_login"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="15dp"
                    android:layout_weight="2"
                    android:background="#64DD17"
                    android:elevation="2dp"
                    android:padding="5dp"
                    android:foreground="?android:selectableItemBackground"
                    android:text="@string/login"
                    android:textColor="#FFF"
                    android:textSize="17sp" />

                <com.amir.manammiam.infrastructure.TextViewFont
                    android:id="@+id/activity_login_text_enroll"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:padding="10dp"
                    android:foreground="?android:selectableItemBackground"
                    android:text="@string/enroll"
                    android:textColor="@color/default_text_color"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/activity_login_frame_enroll_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/include_toolbar"
        android:background="#55FFFF00"
        android:elevation="7dp"
        android:visibility="gone" >

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.amir.manammiam.fragments.EnrollFragment"
            tools:layout="@layout/fragment_enroll" />

    </FrameLayout>

</RelativeLayout>